src/tests/errors/staticanalysis/typing/typeerrors/procedure_unknown_returntype_fail.cmp
program procedure_unknown_return_type_fail
begin
	proc main()
	begin
	end;
	proc test() : notexist /* Fail: notexist does not exist. */
	begin
	    return (new notexist)
	end
end